Modified inventory page.

--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -28,7 +28,7 @@
         <a class="nav-link icon-item text-decoration-none position-relative" [routerLink]="'/cart'">
           <i class="icon material-icons">shopping_cart</i>
           <span class="cart-items-count">{{cartService.itemsCount}}</span>
-          <span class="font-weight-500 ml-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }} $</span>
+          <span class="font-weight-500 mx-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }} $</span>
         </a>
       </li>
       <div class="dropdown position-relative">
