--- a/src/app/src/app/pages/product-details/product-details-page.component.html
+++ b/src/app/src/app/pages/product-details/product-details-page.component.html
@@ -2,29 +2,35 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb my-2 px-0 bg-white">
       <li class="breadcrumb-item"><a href="/" class="text-decoration-none">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Shop</li>
+      <li class="breadcrumb-item active" aria-current="page">Details</li>
     </ol>
   </nav>
 </div>
 
-<!--{{cartService.getItems | json}}-->
 <div class="container my-3" >
   <div class="row">
-    <div class="col-md-6" *ngFor="let item of products">
-      <img class="card-img-top img-thumbnail" [src]="item.imageUrl" alt="Card image cap">
+    <div class="col-md-6" *ngFor="let item of searchResult.items">
+      <img class="card-img-top img-thumbnail" [src]="item.externalImages" alt="Card image cap">
     </div>
-    <div class="col-md-6" *ngFor="let item of products">
+    <div class="col-md-6" *ngFor="let item of searchResult.items">
       <h2>{{item.title}}</h2>
       <div class="row">
         <div class="col-md-12">
-          <span class="label label-primary">Product </span>
-          <span class="text-monospace">No. FF3810463</span>
+          <span class="label label-primary">Vehicle VIN: </span>
+          <span class="text-monospace">{{item.vin}}</span>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 mt-2">
           <p class="description">
-            {{item.description}}
+            {{item.make}}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-2">
+          <p class="description">
+            {{item.model}}
           </p>
         </div>
       </div>
@@ -34,9 +40,6 @@
         </div>
       </div>
       <div class="row add-to-cart">
-        <!--<div class="col-md-3">
-          <input class="btn-lg" type="number" min="1" max="5" value="1" style="width: 75px">
-        </div>-->
         <div class="col-md-9">
           <button class="btn btn-primary btn-lg btn-brand" style="width: 150px"  (click)="addToCart(item)">
             Add to Cart
