--- a/src/app/src/app/pages/home/home-page.component.html
+++ b/src/app/src/app/pages/home/home-page.component.html
@@ -91,7 +91,7 @@ Products carousel
       <div class="carousel-item active">
 
         <div class="row">
-          <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 0: 4">
+          <div class="col-12 col-md-3 mt-3" *ngFor="let item of searchResult.items | slice: 0: 4">
             <div class="card border border-danger zoom">
               <a [routerLink]="'/product/' + item.id">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.externalImages"
@@ -108,7 +108,7 @@ Products carousel
       </div>
       <div class="carousel-item">
         <div class="row">
-          <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 4: 8">
+          <div class="col-12 col-md-3 mt-3" *ngFor="let item of searchResult.items | slice: 4: 8">
             <div class="card border border-danger zoom">
               <a [routerLink]="'/product/' + item.id">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.externalImages"
@@ -125,7 +125,7 @@ Products carousel
       </div>
       <div class="carousel-item">
         <div class="row">
-          <div class="col-12 col-md-3 mt-3" *ngFor="let item of products | slice: 8: 12">
+          <div class="col-12 col-md-3 mt-3" *ngFor="let item of searchResult.items | slice: 8: 12">
             <div class="card border border-danger zoom">
               <a [routerLink]="'/product/' + item.id">
                 <img class="card-img-top img-thumbnail border border-bottom border-success" [src]="item.externalImages"
