Modified filter function.

--- a/src/app/src/app/pages/home/home-page.component.scss
+++ b/src/app/src/app/pages/home/home-page.component.scss
@@ -1,5 +1,5 @@
 .home-pic {
-  background: url(src/assets/bg-home.jpg);
+  background: url('src/assets/bg-home.jpg');
   height: 450px;
   background-size: cover;
   background-position: center center;
@@ -21,3 +21,4 @@
 .animatedButton:hover {
 border-radius: 16px;
 }
+
