--- a/src/app/src/app/header/header.component.html
+++ b/src/app/src/app/header/header.component.html
@@ -14,21 +14,21 @@
         <a class="nav-link" routerLink="/categories">Categories</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link" routerLink="/contact-us">Contact Us</a>
+        <a class="nav-link" routerLink="/contact-us">Contacts</a>
       </li>
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item mx-3">
-        <a class="nav-link" routerLink="/track-order">Track Order</a>
+        <a class="nav-link" routerLink="/track-order">Order</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link" routerLink="/my-account">My Account</a>
+        <a class="nav-link" routerLink="/my-account">Profile</a>
       </li>
       <li class="nav-item pl-4 searchbar__icons">
         <a class="nav-link icon-item text-decoration-none position-relative" [routerLink]="'/cart'">
           <i class="icon material-icons">shopping_cart</i>
           <span class="cart-items-count">{{cartService.itemsCount}}</span>
-          <span class="font-weight-500 mx-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice }} $</span>
+          <span class="font-weight-500 mx-4">{{!cartService.totalPrice ? '0.00' : cartService.totalPrice}} $</span>
         </a>
       </li>
       <div class="dropdown position-relative">
