--- a/src/app/src/_presentation/pages/cart/cart-page.component.html
+++ b/src/app/src/_presentation/pages/cart/cart-page.component.html
@@ -6,7 +6,6 @@
     </ol>
   </nav>
 </div>
-
 <div class="container mb-3" *ngIf="cartService.itemsCount > 0">
   <div class="d-flex flex-row w-100 py-3 border-bottom" *ngFor="let item of cartService.getItems">
     <div class="d-flex align-items-center pr-3">
@@ -15,8 +14,9 @@
     <div class="d-flex align-items-center pr-4 product__img">
       <img [src]="item.externalImages" style="width: 100px; height: 100px">
     </div>
+    {{item| json}}
     <div class="d-flex align-items-center flex-grow-1">
-      <a [routerLink]="'/product/' + item.id" class="text-decoration-none">{{item.title}}</a>
+      <a [routerLink]="'/product/' + item.vin" class="text-decoration-none">{{item.title}}</a>
     </div>
     <div class="d-flex align-items-center flex-grow-1">
       {{item.make}}
